--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,7 @@ buildscript {
         maven { url "https://kotlin.bintray.com/kotlin-eap" }
         maven { url "https://jetbrains.bintray.com/kotlin-native-dependencies" }
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url kotlinCompilerRepo }
     }
 
     dependencies {
@@ -169,6 +170,7 @@ allprojects {
             }
         }
         mavenLocal()
+        maven { url kotlinCompilerRepo }
     }
 }
 
