--- a/kotlinx-coroutines-core/build.gradle
+++ b/kotlinx-coroutines-core/build.gradle
@@ -8,7 +8,7 @@ apply from: rootProject.file("gradle/compile-jvm-multiplatform.gradle")
 apply from: rootProject.file("gradle/compile-common.gradle")
 //apply from: rootProject.file("gradle/compile-js-multiplatform.gradle")
 apply from: rootProject.file("gradle/compile-native-multiplatform.gradle")
-apply from: rootProject.file('gradle/publish-npm-js.gradle')
+//apply from: rootProject.file('gradle/publish-npm-js.gradle')
 apply from: rootProject.file('gradle/performance.gradle')
 
 /*
